[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/textures/ui/logon/logon_background.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/ui/window/window_big_focused.png" type="Texture" id=2]
[ext_resource path="res://src/Logon.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/m3x6.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/textures/ui/success.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/ui/fail.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/ui/cursor.png" type="Texture" id=7]
[ext_resource path="res://src/Cursor.gd" type="Script" id=8]
[ext_resource path="res://assets/sound/error.mp3" type="AudioStream" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.682353, 0.701961, 0.717647, 1 )
corner_detail = 1
anti_aliasing = false

[sub_resource type="DynamicFont" id=2]
use_mipmaps = true
extra_spacing_top = -4
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.682353, 0.701961, 0.717647, 1 )
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.615686, 0.705882, 0.784314, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.537255, 0.619608, 0.686275, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.654902, 0.752941, 0.835294, 1 )

[sub_resource type="DynamicFont" id=7]
extra_spacing_top = -4
font_data = ExtResource( 4 )

[node name="logon" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogonWindow" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = -21.0
margin_right = 26.0
margin_bottom = 22.0
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 6
patch_margin_right = 10
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserEdit" type="LineEdit" parent="LogonWindow"]
margin_left = 3.83315
margin_top = 7.15443
margin_right = 46.8331
margin_bottom = 16.1544
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_constants/minimum_spaces = 0
max_length = 10
placeholder_text = "user"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PassEdit" type="LineEdit" parent="LogonWindow"]
margin_left = 4.3973
margin_top = 18.081
margin_right = 47.3973
margin_bottom = 27.081
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 2 )
custom_constants/minimum_spaces = -35
max_length = 10
secret = true
placeholder_text = "password"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="LogonWindow"]
margin_left = 4.0
margin_top = 29.073
margin_right = 47.0
margin_bottom = 38.073
focus_mode = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
enabled_focus_mode = 0
text = "logon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuccessWindow" type="NinePatchRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.5
margin_top = -10.0
margin_right = 10.5
margin_bottom = 10.0
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 6
patch_margin_right = 10
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="SuccessWindow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = -2.5
margin_right = 2.5
margin_bottom = 2.5
texture = ExtResource( 5 )

[node name="FailWindow" type="NinePatchRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -10.0
margin_right = 11.0
margin_bottom = 10.0
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 6
patch_margin_right = 10
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="FailWindow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = -2.5
margin_right = 2.5
margin_bottom = 2.5
texture = ExtResource( 6 )

[node name="NotificationTimer" type="Timer" parent="."]

[node name="Cursor" type="CanvasLayer" parent="."]
layer = 2

[node name="Cursor" type="TextureRect" parent="Cursor"]
margin_left = 20.9884
margin_top = 14.9962
margin_right = 23.9884
margin_bottom = 17.9962
mouse_filter = 2
texture = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="pressed" from="LogonWindow/Button" to="." method="attempt_login"]
